--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Pentaworks Service</title>
-    <link rel="stylesheet" href="/static/css/cmmn/main.css">
-    <script type="text/javascript" src="/static/js/lib/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="/static/js/lib/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="/static/js/lib/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/static/js/lib/jquery-ui-datepicker-ko.js"></script>
-    <script type="text/javascript" src="/static/js/lib/jquery.mtz.monthpicker.js"></script>
-    <script type="text/javascript" src="/static/js/lib/jquery.popupoverlay.js"></script>
-    <script type="text/javascript" src="/static/js/lib/jquery.placeholder.min.js"></script>
-    <script type="text/javascript" src="/static/js/mainpage.js"></script>
+    <link rel="stylesheet" th:href="@{/css/cmmn/main.css}">
+    <script type="text/javascript" th:src="@{/js/lib/jquery-1.10.2.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/jquery-migrate-1.2.1.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/jquery-ui.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/jquery-ui-datepicker-ko.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/jquery.mtz.monthpicker.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/jquery.popupoverlay.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/jquery.placeholder.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/mainpage.js}"></script>
 
     <script>
         $(document).ready(function () {
@@ -52,8 +52,8 @@
             <div class="topMenuArea">
                 <div class="naviArea">
                     <div class="topBoxHomeUtil">
-                        <div class="mainLogo"><a href="main.html" class="homelogo"><img src="/static/images/cmmn/logo.png"
-                                    alt="우리은행  국민주택채권"></a></div>
+                        <div class="mainLogo"><a href="main.html" class="homelogo"><img th:src="@{/images/cmmn/logo.png}"
+                                    alt="PENTAWORKS"></a></div>
                         <div class="GNB_title">
                             <ul>
                                 <li class="subject1"><span>상담관리</span></li>
@@ -105,7 +105,7 @@
             <div class="afterLogin">
                 <div><span class="loginName">qwer</span> (대표회원) 님 환영합니다. <a href="login.html"><button type="button"
                             id="logoutBtn" class="white">로그아웃</button></a>&nbsp; &nbsp;(최근로그인 | 2019-12-23 08:50)</div>
-                <div><img src="/static/images/cmmn/clock_icon.png" alt="우리은행  국민주택채권"><b>08 : 20</b> <button type="button"
+                <div><img th:src="@{/images/cmmn/clock_icon.png}" alt="우리은행  국민주택채권"><b>08 : 20</b> <button type="button"
                         class="white">연장하기</button></div>
             </div>
         </div>
@@ -166,7 +166,7 @@
                 </form>
             </div>
             <!-- 메인화면은 top 버튼 제외 -->
-            <!-- <div class="goTop"><a href="#" class="btnGoTop"><img src="/static/images/cmmn/btn_top.png" alt="위로이동"></a></div> -->
+            <!-- <div class="goTop"><a href="#" class="btnGoTop"><img th:src="@{/images/cmmn/btn_top.png}" alt="위로이동"></a></div> -->
         </div>
     </footer>
     <!-- //footer -->
@@ -175,7 +175,7 @@
     <div class="layerWrapper layerSizeM" id="layerNoticeDlApp">
         <div class="layerHeader">
             <div><strong>모바일 이용 안내</strong></div>
-            <div><a href="#" class="btnClose layerNoticeDlApp_close"><img src="/static/images/cmmn/btn_layer_close.png"
+            <div><a href="#" class="btnClose layerNoticeDlApp_close"><img th:src="@{/images/cmmn/btn_layer_close.png}"
                         alt="창닫기"></a></div>
         </div>
         <div class="layerContainer">
@@ -196,7 +196,7 @@
     <div class="layerWrapper layerSizeM" id="layerNoticeFindPw">
         <div class="layerHeader">
             <div><strong>비밀번호 찾기 안내</strong></div>
-            <div><a href="#" class="btnClose layerNoticeFindPw_close"><img src="/static/images/cmmn/btn_layer_close.png"
+            <div><a href="#" class="btnClose layerNoticeFindPw_close"><img th:src="@{/images/cmmn/btn_layer_close.png}"
                         alt="창닫기"></a></div>
         </div>
         <div class="layerContainer">
@@ -227,7 +227,7 @@
         <div class="layerHeader">
             <div><strong>개인정보처리(취급)방침</strong></div>
             <div><a href="#" class="btnClose popLayerPersonalInfoRuleV2_close"><img
-                        src="/static/images/cmmn/btn_layer_close.png" alt="창닫기"></a></div>
+                        th:src="@{/images/cmmn/btn_layer_close.png}" alt="창닫기"></a></div>
         </div>
         <div class="layerContainer">
             <div class="layerContent">
