--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Pentaworks Service</title>
     <link rel="stylesheet" th:href="@{/css/cmmn/main.css}">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery-1.10.2.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery-migrate-1.2.1.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery-ui.min.js}"></script>
@@ -15,6 +17,7 @@
     <script type="text/javascript" th:src="@{/js/lib/jquery.popupoverlay.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery.placeholder.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/mainpage.js}"></script>
+    <script type="text/javascript" th:src="@{/js/common.js}"></script>
 
     <script>
         $(document).ready(function () {
@@ -36,7 +39,7 @@
 </head>
 
 <body class="mainPage">
-    <div class="wrapper">
+    <div class="wrapper" id="app">
         <!-- header :: s -->
         <header class="topMenuWrapper">
             <div class="topUtilWrap">
@@ -105,7 +108,7 @@
             <div class="afterLogin">
                 <div><span class="loginName">qwer</span> (대표회원) 님 환영합니다. <a href="login.html"><button type="button"
                             id="logoutBtn" class="white">로그아웃</button></a>&nbsp; &nbsp;(최근로그인 | 2019-12-23 08:50)</div>
-                <div><img th:src="@{/images/cmmn/clock_icon.png}" alt="우리은행  국민주택채권"><b>08 : 20</b> <button type="button"
+                <div><img th:src="@{/images/cmmn/clock_icon.png}" alt="우리은행  국민주택채권"><b>08 : 20</b> <button type="button" @click="tttt"
                         class="white">연장하기</button></div>
             </div>
         </div>
@@ -1054,6 +1057,27 @@
         </div>
     </div>
     <!-- //개인정보취급처리방침 -->
+<script>
+    var g_cxt = '/'
+    g_cxt = g_cxt.substring(0, g_cxt.length-1);
+
+    var app = new Vue({
+        el:"#app",
+        data:{},
+        mounted: function(){
+            alert("1")
+        },
+        methods:{
+            tttt() {
+                var param = {}
+                cf_call("/testpath", param, this.ttttCB);
+            },
+            ttttCB(data){
+                console.log(data)
+            }
+        }
+    })
+</script>
 </body>
 
 </html>
