--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,8 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Pentaworks Service</title>
     <link rel="stylesheet" th:href="@{/css/cmmn/main.css}">
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery-1.10.2.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery-migrate-1.2.1.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery-ui.min.js}"></script>
@@ -16,6 +14,8 @@
     <script type="text/javascript" th:src="@{/js/lib/jquery.mtz.monthpicker.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery.popupoverlay.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery.placeholder.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/vue.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/axios.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/mainpage.js}"></script>
     <script type="text/javascript" th:src="@{/js/common.js}"></script>
 
