service, shop 페이지 추가

--- a/src/main/resources/templates/fragment/lnb.html
+++ b/src/main/resources/templates/fragment/lnb.html
@@ -8,26 +8,26 @@
                 <li class="depthBox">
                     <a href="#" class="dep1"><span>상담 관리</span></a>
                     <ul>
-                        <li class="current">
-                            <a href="service-inbox.html">
+                        <li>
+                            <a href="/service/inbox">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-vendor" alt="아이콘">
                                 <span>상담접수관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="service-visit.html">
+                            <a href="/service/visit">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-user" alt="아이콘">
                                 <span>방문개통관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="service-status.html">
+                            <a href="/service/status">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-pw" alt="아이콘">
                                 <span>상담관리현황</span>
                             </a>
                         </li>
                         <li>
-                            <a href="service-marketing.html">
+                            <a href="/service/marketing">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-pw" alt="아이콘">
                                 <span>마케팅대상관리</span>
                             </a>
@@ -38,13 +38,13 @@
                     <a href="#" class="dep1"><span>SKT 관리</span></a>
                     <ul>
                         <li>
-                            <a href="carr-mntrt-manage.html">
+                            <a href="#">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>요금제등록관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="carr-deal-manage.html">
+                            <a href="#">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>판매정책관리</span>
                             </a>
@@ -89,19 +89,19 @@
                     <a href="#" class="dep1"><span>매장 관리</span></a>
                     <ul>
                         <li>
-                            <a href="shop-manage.html">
+                            <a href="/shop/manage">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-nfc" alt="아이콘">
                                 <span>매장정보관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="shop-employees.html">
+                            <a href="/shop/employees">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-nfc2" alt="아이콘">
                                 <span>직원관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="shop-notice.html">
+                            <a href="/shop/notice">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-nfc2" alt="아이콘">
                                 <span>공지사항관리</span>
                             </a>
