--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -22,7 +22,9 @@
     </div>
     <!-- //container -->
     <!-- footerFragment -->
-    <th:block th:replace="fragment/footer :: footerFragment"> </th:block>
+    <th:block th:replace="fragment/footer :: footerFragment"></th:block>
+    <!-- layerFragment -->
+    <th:block layout:fragment="layer"></th:block>
 </body>
 
 </html>
