--- a/src/main/resources/templates/fragment/cmmn.html
+++ b/src/main/resources/templates/fragment/cmmn.html
@@ -1,7 +1,8 @@
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <!-- cmmnFragment -->
     <th:block th:fragment="cmmnFragment">
         <link rel="stylesheet" th:href="@{/css/cmmn/public.css}">
+        <th:block layout:fragment="css"></th:block>
         <script type="text/javascript" th:src="@{/js/lib/jquery-1.10.2.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/lib/jquery-migrate-1.2.1.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/lib/jquery-ui.min.js}"></script>
@@ -11,6 +12,7 @@
         <script type="text/javascript" th:src="@{/js/lib/jquery.placeholder.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/lib/vue.js}"></script>
         <script type="text/javascript" th:src="@{/js/lib/axios.min.js}"></script>
+        <script type="text/javascript" th:src="@{/js/lnb.js}"></script>
         <script type="text/javascript" th:src="@{/js/public.js}"></script>
     </th:block>
     <!-- //cmmnFragment -->
