--- a/src/main/resources/templates/fragment/cmmn.html
+++ b/src/main/resources/templates/fragment/cmmn.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" th:src="@{/js/lib/axios.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/lnb.js}"></script>
         <script type="text/javascript" th:src="@{/js/public.js}"></script>
+        <script type="text/javascript" th:src="@{/js/common.js}"></script>
     </th:block>
     <!-- //cmmnFragment -->
 </html>
