--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="app">
+    <div id="app" v-cloak>
         <!-- headerFragment -->
         <th:block th:replace="fragment/header :: headerFragment"></th:block>
         <!-- container -->
