--- a/src/main/resources/templates/fragment/cmmn.html
+++ b/src/main/resources/templates/fragment/cmmn.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" th:src="@{/js/lib/jquery.popupoverlay.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery.placeholder.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/vue.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/vue-the-mask/vue-the-mask.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/axios.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lnb.js}"></script>
     <script type="text/javascript" th:src="@{/js/public.js}"></script>
