--- a/src/main/resources/templates/page/shop-manage.html
+++ b/src/main/resources/templates/page/shop-manage.html
@@ -99,57 +99,40 @@
                             <tr>
                                 <th>회사명<span class="icoMust"><em>필수</em></span></th>
                                 <td colspan="3">
-                                    <input type="text" class="wPer" id="" placeholder="회사명" v-model="shopInfo.bnNm" @input="shopInfo.bnNm = $event.target.value">
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>주소<span class="icoMust"><em>필수</em></span></th>
-                                <td colspan="3">
-                                    <input type="text" class="wZipcode" id="" placeholder="우편번호" value="11038">
-                                    <a href="#" class="btnS colorWhite popLayerDaumPostcodeSrch_open"
-                                       onclick="layer_execDaumPostcode(); return false;">
-                                        <span>주소 검색</span>
-                                    </a>
-                                    <p class="br">
-                                        <input type="text" class="wAddr" id="" placeholder="주소 입력" v-model="shopInfo.bnAddrDtl" @input="shopInfo.bnAddrDtl = $event.target.value">
-                                        <input type="text" class="wAddr" id="" placeholder="상세주소 입력" value="정동, 배재정동빌딩 B동 10층">
-                                    </p>
-                                </td>
-                            </tr>
-                            <!-- <tr>
-                                <th>담당자 이름<span class="icoMust"><em>필수</em></span></th>
-                                <td colspan="3">
-                                    <input style="width: 100%;" type="text" id=""
-                                        placeholder="담당자명을 입력해 주세요">
-                                </td>
-                                <th>담당자 연락처<span class="icoMust"><em>필수</em></span></th>
-                                <td><input style="width: 100%;" type="text" id=""
-                                        placeholder="연락처를 입력해 주세요"></td>
-                            </tr> -->
-                            <tr>
-                                <th>사업자등록번호<span class="icoMust"><em>필수</em></span></th>
-                                <td colspan="3">
-                                    <input style="width: 33%;" type="text" id="" placeholder="000">
-                                    <input style="width: 33%;" type="text" id="" placeholder="00">
-                                    <input style="width: 33%;" type="text" id="" placeholder="00000">
+                                    <input
+                                        type="text"
+                                        class="wPer"
+                                        placeholder="회사명"
+                                        v-model="shopInfo.bnNm"
+                                        @input="shopInfo.bnNm = $event.target.value"
+                                    >
                                 </td>
                             </tr>
                             <tr>
                                 <th>대표자명<span class="icoMust"><em>필수</em></span></th>
                                 <td colspan="3">
-                                    <input type="text" class="wPer" id="" placeholder="대표자명을 입력해주세요">
+                                    <input
+                                            type="text"
+                                            class="wPer"
+                                            placeholder="대표자명을 입력해주세요"
+                                            v-model="shopInfo.ownerNm"
+                                    >
                                 </td>
                             </tr>
                             <tr>
-                                <th>업태/종목<span class="icoMust"><em>필수</em></span></th>
+                                <th>사업자등록번호<span class="icoMust"><em>필수</em></span></th>
                                 <td colspan="3">
-                                    <input style="width: 49%;" type="text" id="" placeholder="업태명을 입력해주세요">
-                                    /
-                                    <input style="width: 49%;" type="text" id="" placeholder="종목명을 입력해주세요">
+                                    <input
+                                            style="width: 100%;"
+                                            type="text"
+                                            placeholder="'-'없이 숫자 10자리 입력"
+                                            v-mask="'###-##-#####'"
+                                            v-model="shopInfo.bnRegNo"
+                                    >
                                 </td>
                             </tr>
                             <tr>
-                                <th>증빙서류<span class="icoMust"><em>필수</em></span></th>
+                                <th>사업자등록증<span class="icoMust"><em>필수</em></span></th>
                                 <td colspan="3">
                                     <p class="desBr">
                                         신청 정보를 증명할 수 있는 사업자등록증 사본을 제출해 주세요
@@ -161,7 +144,71 @@
                                         경우 서비스 이용에 제한을 받을 수 있습니다.
                                     </p>
                                     <br>
-                                    <input type="text" id="" placeholder="우편번호" value="11038">
+                                    <input
+                                            type="text"
+                                            placeholder="사업자등록증 사본"
+                                            v-model="shopInfo.bnRegCard"
+                                    >
+                                    <a href="#" class="btnS colorWhite"><span>파일첨부</span></a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>주소<span class="icoMust"><em>필수</em></span></th>
+                                <td colspan="3">
+                                    <input
+                                        type="text"
+                                        class="wZipcode"
+                                        placeholder="우편번호"
+                                        v-model="daumPostcodeRslt.zonecode"
+                                    >
+                                    <a
+                                        href="#"
+                                        class="btnS colorWhite popLayerDaumPostcodeSrch_open"
+                                        onclick="layer_execDaumPostcode(); return false;"
+                                    >
+                                        <span>주소 검색</span>
+                                    </a>
+                                    <p class="br">
+                                        <input
+                                            type="text"
+                                            class="wAddr"
+                                            placeholder="주소 입력"
+                                            v-model="shopInfo.bnAddrDtl"
+                                            @input="shopInfo.bnAddrDtl = $event.target.value"
+                                        >
+                                        <input
+                                            type="text"
+                                            class="wAddr"
+                                            placeholder="상세주소 입력"
+                                            v-model="bnAddrBldg"
+                                        >
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>연락처<span class="icoMust"><em>필수</em></span></th>
+                                <td colspan="3">
+                                    <input
+                                            style="width: 100%;"
+                                            type="text"
+                                            placeholder="'-'없이 숫자 9-11자리 입력"
+                                            v-mask="phoneMask"
+                                            v-model="bnPnNo"
+                                    >
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>대표사진</th>
+                                <td colspan="3">
+                                    <p class="br">
+                                        <img :src="bnImgFull" alt="매장 대표사진" style="width: 300px; height: 300px;">
+                                    </p>
+                                    <br>
+                                    <input
+                                            type="text"
+                                            placeholder="매장 대표사진"
+                                            v-model="shopInfo.bnImg"
+                                    >
                                     <a href="#" class="btnS colorWhite"><span>파일첨부</span></a>
                                 </td>
                             </tr>
@@ -191,7 +238,7 @@
 
                 <!-- 컨텐츠 -->
                 <div class="guidanceWrapper">
-                    <vue-daum-postcode style="width: 559px; height: 300px;" />
+                    <vue-daum-postcode style="width: 559px; height: 300px;" @complete="daumPostcodeCB($event)" />
                 </div>
                 <!-- //컨텐츠 -->
             </div>
@@ -215,6 +262,9 @@
     <script type="text/javascript" th:src="@{/js/lib/vue-daum-postcode/index.js}"></script>
 
     <script type="text/javascript">
+        var g_cxt = '/'
+        g_cxt = g_cxt.substring(0, g_cxt.length-1);
+
         $(function () {
             if ($(".layerWrapper").length) {
                 //개통결과등록
@@ -225,18 +275,65 @@
         var app = new Vue({
             el:"#app",
             data:{
-                shopInfo: {}
+                shopInfo: {},
+                daumPostcodeRslt: {},
+                bnAddrBldg: '',
+                bnPnNo: '',
+                phoneMask: ['##'],
+                phoneMaskSeoul: ['##-###-####', '##-####-####'],
+                phoneMaskOther: ['###-###-####', '###-####-####'],
+                bnImgPath: '/images/shop/'
             },
             mounted: function(){
                 this.getShopInfo()
             },
-            methods:{
+            watch: {
+                bnPnNo (newPhoneNo) {
+                    if (newPhoneNo.length === 2) {
+                        this.setPhoneMask(newPhoneNo)
+                    }
+                }
+            },
+            methods: {
                 getShopInfo() {
                     var param = {}
                     cf_call("/shop/getShopInfo", param, this.getShopInfoCB);
                 },
                 getShopInfoCB(rslt){
-                     this.shopInfo = rslt
+                    if (rslt.bnPnNo !== undefined) {
+                        this.setPhoneMask(rslt.bnPnNo)
+                        this.bnPnNo = rslt.bnPnNo
+                    }
+                    this.shopInfo = rslt
+                },
+                daumPostcodeCB(e) {
+                    this.daumPostcodeRslt = e
+                    this.shopInfo.bnAddrSido = this.daumPostcodeRslt.sido
+                    this.shopInfo.bnAddrSigg = this.daumPostcodeRslt.sigungu
+                    this.shopInfo.bnAddrDtl = this.daumPostcodeRslt.address
+                    $('#popLayerDaumPostcodeSrch').popup('hide')
+                },
+                setPhoneMask(phoneNo) {
+                    var areaCode = phoneNo.substring(0, 2)
+                    if (areaCode === '02') {
+                        this.phoneMask = this.phoneMaskSeoul
+                    } else {
+                        this.phoneMask = this.phoneMaskOther
+                    }
+                }
+            },
+            computed: {
+                bnAddrFull() {
+                    return this.shopInfo.bnAddrDtl + ' ' + this.bnAddrBldg
+                },
+                bnRegNoND() {
+                    return this.shopInfo.bnRegNo.replaceAll('-', '')
+                },
+                bnPnNoND() {
+                    return this.bnPnNo.replaceAll('-', '')
+                },
+                bnImgFull() {
+                    return this.bnImgPath + this.shopInfo.bnImg
                 }
             }
         })
