요금제 사용 미사용 기능 추가 체크박스 전체선택 기능 추가 사용 미사용시 validate 적용

--- a/src/main/resources/templates/fragment/lnb.html
+++ b/src/main/resources/templates/fragment/lnb.html
@@ -35,16 +35,16 @@
                     </ul>
                 </li>
                 <li class="depthBox">
-                    <a href="#" class="dep1"><span>SKT 관리</span></a>
+                    <a href="#none" class="dep1"><span>SKT 관리</span></a>
                     <ul>
                         <li>
-                            <a href="#">
+                            <a href="/carr/mntrt/skt">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>요금제등록관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/carr/deal/skt">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>판매정책관리</span>
                             </a>
@@ -52,16 +52,16 @@
                     </ul>
                 </li>
                 <li class="depthBox">
-                    <a href="#" class="dep1"><span>KT 관리</span></a>
+                    <a href="#none" class="dep1"><span>KT 관리</span></a>
                     <ul>
                         <li>
-                            <a href="#">
+                            <a href="/carr/mntrt/kt">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>요금제등록관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/carr/deal/kt">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>판매정책관리</span>
                             </a>
@@ -69,16 +69,16 @@
                     </ul>
                 </li>
                 <li class="depthBox">
-                    <a href="#" class="dep1"><span>LGU+ 관리</span></a>
+                    <a href="#none" class="dep1"><span>LGU+ 관리</span></a>
                     <ul>
                         <li>
-                            <a href="#">
+                            <a href="/carr/mntrt/lgu">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>요금제등록관리</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/carr/deal/lgu">
                                 <img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">
                                 <span>판매정책관리</span>
                             </a>
