--- a/src/main/resources/templates/page/carr-deal-manage.html
+++ b/src/main/resources/templates/page/carr-deal-manage.html
@@ -819,4 +819,14 @@
     });
 </script>
 
+<div layout:fragment="script">
+    <script>
+        var app = new Vue({
+            el: "#app",
+
+        })
+    </script>
+</div>
+
+
 </html>
